--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,6 +7,7 @@ install! 'cocoapods', :deterministic_uuids => false
 target 'DeepLinking' do
   config = use_native_modules!
 
+  pod 'React-RCTLinking', :path => '../node_modules/react-native/Libraries/LinkingIOS'
   # Flags change depending on the env values.
   flags = get_default_flags()
 
